--- a/src/index.css
+++ b/src/index.css
@@ -8,31 +8,26 @@ body {
   -moz-osx-font-smoothing: grayscale;
   min-height: 100vh;
 }
-
 #root {
   min-height: 100vh;
 
 }
-
 #root > .wrapper {
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
-
+/*For App component*/
 .App {
   text-align: center;
 }
-
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
   pointer-events: none;
 }
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -43,18 +38,15 @@ code {
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
 .App-link {
   color: #61dafb;
 }
-
 
 /*For Table sort*/
 table.table thead tr th {
   position: relative;
   padding-right: 18px !important;
 }
-
 table.table thead tr th span.indicator {
   position: absolute;
   top: 20px;
@@ -68,7 +60,6 @@ table.table thead tr th span.indicator {
 table.table.sort_asc thead tr th.active_col span {
   border-top: 4px solid darkgrey;
 }
-
 table.table.sort_desc thead tr th.active_col span {
   border-bottom: 4px solid darkgrey;
   top: 15px;
@@ -92,9 +83,7 @@ table.table.sort_desc thead tr th.active_col span {
   border-color: #dde0e3 !important;
   }
 
-
 /*For Checkboxes*/
-
 #root .ui.toggle.checkbox input:checked ~ .box::before,
 #root .ui.toggle.checkbox input:checked ~ label::before {
   background-color: green !important;
