--- a/src/Components/App/style.module.css
+++ b/src/Components/App/style.module.css
@@ -3,8 +3,5 @@
 }
 .content {
   min-height: 100vh;
-  margin: 0 auto -70px;  /*See at Footer/Style.module.css - .footer*/
-}
-.footer_pusher {
-  height: 70px;  /*See at Footer/Style.module.css - .footer*/
+  margin: 0 auto;
 }
