--- a/src/Components/TaskTableAdmin/style.module.css
+++ b/src/Components/TaskTableAdmin/style.module.css
@@ -4,3 +4,29 @@
 .active_col {
   border: 10px solid red !important;
 }
+.th:nth-child(1),
+.td:nth-child(1) {
+  width: 70px
+}
+.th:nth-child(2),
+.td:nth-child(2){
+  width: 150px;
+  max-width: 150px;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+}
+.th:nth-child(3),
+.td:nth-child(3) {
+  width: 200px;
+  max-width: 200px;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+}
+.th:nth-child(4),
+.td:nth-child(4) {
+  min-width: 300px;
+}
+.th:nth-child(5),
+.td:nth-child(5) {
+  width: 80px
+}
